<resources>
    <string name="app_name">LalisaShop</string>
    <string name="hello_saya_lisa_aprilia">Hello, Saya Lisa Aprilia!</string>
    <string name="profile_nama">Lisa Aprilia</string>
    <string name="profile_username">lisaaprilia</string>
    <string name="profile_tanggallahir">30 April 2002</string>
    <string name="profile_followers">1000</string>
    <string name="profile_follow_button">Follow</string>
    <string name="profile_lbl_nama">Lisa Aprilia</string>
    <string name="profile_blog_pribadi">Blog Pribadi</string>
    <string name="profile_postingan_count">50</string>
    <string name="profile_postingan">Postingan</string>
    <string name="profile_postingan_count2">1000</string>
    <string name="profile_pengikut">Pengikut</string>
    <string name="profile_mengikuti">Mengikuti</string>
    <string name="profile_jumlah">10</string>
    <string name="profile_follow">Ikuti</string>
    <string name="profile_messenge">Kirim Pesan</string>
    <string name="profile_lbl_pengikut">pengikut</string>
    <string name="profile_username_">Username</string>

    <string name="content_text">Belanja lah di LalisaShop terjamin dan terjangkau.Dengan Belanja disini anda bisa mendaptkan harga yang kompetitif,bahkan bukan hanya harga yang kompetitif tapi promo Gratis Ongkir bukankah itu membuat anda suka akan tidak adanya biaya kirimnya.Gratis Onkir bukanlah hal yang asing di berbagai online Shop.</string>
    <string name="content_specs_deskripsi">PROMO !!HARGA PROMO SUDAH DISKON Dari Harga Rp 199.000,
-
Sandal Gunung Pria Wanita Casual Full Black LAF Project Jack V.1
Size : 36, 37, 38, 39, 40, 41, 42, 43, 44 dan untuk yang mempunyai ukuran besar BIG SIZE kami mempunyai size 45 dan 46 ada di link yang berbeda :
-
Material yang kami gunakan adalah material Premium.
Brand : LAF Project
Bahan Upper : Webbing Premuim dan di tambah Strap yang terbaik.
Bahan Insole : Phylon Footbed (yang sangat empuk dan menyatu dengan lekuk kaki)
Bahan Outsole : Rubber Sole ( dari bahan terbaik dan anti slip)
Size : 36 s/d 44

Size Chart Kami menggunkan ukuran panjang kaki (bukan panjang sol), silahkan untuk mengukur terlebih dahulu panjang kaki kk :
Panjang kaki 23 = Size 36
Panjang kaki 23,5 = Size 37
Panjang kaki 24 = Size 38
Panjang kaki 24,5 = Size 39
Panjang kaki 25 = Size 40
Panjang kaki 25,5= Size 41
Panjang kaki 26 = Size 42
Panjang kaki 26,5 = Size 43
Panjang Kaki 27 = Size 44
-
Note:
Cara ukur menentukan size.
Ukur dari ujung Tumit sampai ujung Jempol, sesuaikan panjang dengan ukuran yang tertera diatas.
-
Bagi agan2 yg kesulitan mencari sandal yang nyaman tapi tetap menampakan penampilan exclusive dengan design elegant masa kini, Sandal Pria dan Wanita Brand LAF Project adalah solusi yg paling pas.
Sandal Pria Wanita LAF Project merupakan sandal handmade asal kota
Bandung. Sandal Pria wanita LAF Project membuat agan tampil lebih trendi dan percaya diri saat dipakai sehari-hari. Sendal Pria LAF Project di produksi dengan tenaga terampil yang berpengalaman dibidangnya. kerapihan, kenyamanan dan kekuatan produk selalu kami utamakan.
-
Selain barang berkkualitas yang agan dpatkan dengan berbelanja di LAF Project, kelebihan-kelebihan berikut bisa agan dapatkan hanya di LAF Project :
- Stok Ready (bukan PO)
- Barang On Hand (bukan dropship)
- Fast respon
- Update resi 1x24jam
- Bisa tukar Size kalo gak pas
- Kualitas terjamin puas
- Foto produk real pict.
- Pengiriman 1x24jam
- Barang tidak sampai kami garansi 100% uang kembali.
- Utk reseller kerahasiaan data customer terjamin</string>
    <string name="content_specs_material">Material Premium, Brand LAF Project, Bahan Upper,Bahan Insole dan BahanOutsole.</string>
    <string name="content_specs_stok">455</string>
    <string name="content_specs_warna">Hitam, Navy, Maroon, Army dan Hitam Putih</string>
    <string name="content_prize">Rp. 7.500.000</string>
    <string name="specs_stok">Stok</string>

</resources>